tests/variants/ill-typed/unexpected-variable-label-1.stella
language core;
extend with #variants;

fn main(a : Nat) -> <| foo : Nat |> {
    return <| bar = 0 |>
}
